# ai-assessment

./: .gitignore  README.md  pyproject.toml  run.py
data/: adam.md  attention_is_all_you_need.md  bert.md  imagenet_classification.md  lora.md
eval/: dataset.json  evaluate.py
src/: agent.py  ingest.py  models.py  retriever.py
